syntax = "proto2";

option java_package = "com.razorski.razor";
option java_multiple_files = true;

// Note: The proto definitions on the arduino side are compiled using 'required' tag because
//       nanopb didn't support 'optional'.
//
// Note: DO NOT use double in the proto definitions because it's not supported fully in arduino.
//       Instead, use float.

// Data collected from the IMU hardware.
// This includes accelerometer, gyro, and temperature data.
message IMUData {
    // Acceleration data in millig's.
    optional int32 ax = 1;
    optional int32 ay = 2;
    optional int32 az = 3;

    // Magnetic data in degrees/sec.
    optional int32 gx = 4;
    optional int32 gy = 5;
    optional int32 gz = 6;

    // Space location data in degrees.
    optional float yaw = 7;
    optional float pitch = 8;
    optional float roll = 9;

    // Temperature data in Celsius.
    optional int32 temperature = 10;
}

// All the sensors coming from one foot.
message FootSensorData {
    optional IMUData imu_data = 1;
    // Value of the pressure sensor [0, 1024].
    // The higher the value, the more pressure on the sensor.
    optional int32 pressure_front = 2;
}

// All the sensor data.
message SensorData {
    optional FootSensorData left = 1;
    optional FootSensorData right = 2;

    // These tags are reserved for Android-only and will be populated on the phone.
    // Reserved numbers start at 101.
    optional int64 timestamp_msec = 101;
}